# dinnermate-fable

./: .gitignore  COOLIFY.md  FUTURE.md  OVERNIGHT_REPORT.md  README.md  compose.coolify.yaml  docker-compose.yml
client/: .dockerignore  Dockerfile  nginx.conf  pubspec.yaml
client/lib/: main.dart
client/lib/src/: hours.dart  identity.dart  recent_rooms.dart  router.dart  theme.dart  time_format.dart
client/lib/src/api/: api_client.dart  models.dart
client/lib/src/screens/: create_room.dart  home.dart  list_detail.dart  lists.dart  matches.dart  placeholders.dart  room.dart  (+1 more)
client/test/: api_client_test.dart  create_room_radius_test.dart  home_recent_rooms_test.dart  hours_test.dart  identity_test.dart  list_detail_membership_test.dart  list_detail_swipe_list_test.dart  match_tile_test.dart  mealtime_api_client_test.dart  mealtime_create_room_test.dart  mealtime_models_test.dart  mealtime_room_tag_test.dart  models_test.dart  open_badge_test.dart  recent_rooms_test.dart  restaurant_card_back_test.dart  restaurant_card_unknown_test.dart  restaurant_details_test.dart  room_join_test.dart  room_screen_v3_test.dart  swipe_deck_test.dart
client/web/: index.html  manifest.json
docs/superpowers/plans/: 2026-06-11-dinnermate-v1.md  2026-06-12-mealtime.md  2026-06-12-v2-features.md  2026-06-12-v3.md
docs/superpowers/specs/: 2026-06-11-dinnermate-design.md  2026-06-12-mealtime-design.md  2026-06-12-v2-features-design.md  2026-06-12-v3-design.md
scripts/: smoke.sh
server/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile
server/crates/dinnermate-api/: Cargo.toml
server/crates/dinnermate-api/src/: config.rs  error.rs  extract.rs  google.rs  lib.rs  main.rs  osm.rs  server.rs  tz.rs
server/crates/dinnermate-api/src/routes/: health.rs  lists.rs  mod.rs  rooms.rs
server/crates/dinnermate-api/tests/: api_test.rs
server/crates/dinnermate-core/: Cargo.toml
server/crates/dinnermate-core/data/: seed_restaurants.json
server/crates/dinnermate-core/src/: code.rs  error.rs  filter.rs  hours.rs  lib.rs  list_deck.rs  model.rs  osm_hours.rs  provider.rs  repo.rs  seed.rs  testing.rs
server/crates/dinnermate-core/src/service/: lists.rs  mod.rs  rooms.rs
server/crates/dinnermate-db/: Cargo.toml
server/crates/dinnermate-db/src/: details_cache_repo.rs  error.rs  lib.rs  list_repo.rs  pool.rs  room_repo.rs
server/crates/dinnermate-db/tests/: repo_test.rs
server/migrations/: 0001_init.sql  0002_v2_features.sql  0003_v3.sql  0004_mealtime.sql
server/scripts/: test-db.sh
server/specs/: openapi.yaml
(+9 files in other folders)
