[workspace]
resolver = "2"
members = [
    "crates/dinnermate-core",
    "crates/dinnermate-db",
    "crates/dinnermate-api",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
async-trait = "0.1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dinnermate-core = { path = "crates/dinnermate-core" }
dinnermate-db = { path = "crates/dinnermate-db" }
