[package]
name = "dinnermate-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
dinnermate-core.workspace = true
dinnermate-db.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
async-trait.workspace = true
rand.workspace = true
thiserror.workspace = true
tzf-rs = "1"
chrono-tz = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
